--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
-    <title>Las Violetas Hotel</title>
+    <title>Apart Hotel Las Violetas</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
             </ul>
         </nav>
         <div class="section__container header__container">
-            <h1>Explora la magia<br />de Misiones<br />en nuestro Hotel</h1>
+            <h1>Explora la magia<br />de Misiones en<br /> nuestro Apart Hotel</h1>
         </div>
     </header>
 
@@ -48,7 +48,7 @@
                 Nuestras habitaciones, desde estándar hasta suites, están diseñadas para
                 ofrecerte una experiencia inolvidable. Con un equipo comprometido a hacer tus vacaciones placenteras,
                 ofrecemos servicios de limpieza y mantenimiento, junto con deliciosas comidas en nuestro restaurante y
-                tres piscinas al aire libre.
+                piscina al aire libre.
                 <br><br>
                 A solo 15 minutos de Posadas, nuestro hotel es el punto de partida ideal
                 para explorar la región. Ya sea por negocios o placer, te ofrecemos una experiencia auténtica y
@@ -68,18 +68,18 @@
                     <p>Nuestras habitaciones ofrecen un ambiente acogedor y cómodo para tu estancia. Desde habitaciones
                         estándar hasta suites, cada una está diseñada para brindarte comodidad y tranquilidad durante tu
                         visita. Con comodidades modernas y detalles cuidados, nuestras habitaciones son perfectas para
-                        viajes de negocios o placer. ¡Descubre el confort y la hospitalidad en nuestro hotel!</p>
+                        viajes de negocios o placer.</p>
                 </div>
             </div>
             <div class="service__card">
                 <img src="img/serv-2.jpg" alt="service">
                 <div class="service__content">
                     <h4>Aire Libre</h4>
-                    <p>Nuestro espacio al aire libre es un oasis de relajación y diversión. Con tres piscinas para
+                    <p>Nuestro espacio al aire libre es un oasis de relajación y diversión. Con una piscina para
                         refrescarte y disfrutar del sol, además de un servicio de cócteles para añadir un toque de
                         placer a tu estadía. También contamos con áreas de asadores, donde puedes compartir momentos
                         inolvidables con amigos y familiares mientras disfrutas de deliciosas comidas al aire libre.
-                        ¡Ven y sumérgete en la experiencia de nuestro hotel!</p>
+                    </p>
                 </div>
             </div>
             <div class="service__card">
@@ -90,7 +90,7 @@
                         Nuestro restaurante ofrece una experiencia culinaria excepcional, combinando sabores locales en
                         un ambiente acogedor y familiar. Con platos frescos y de calidad, desde desayunos energizantes
                         hasta cenas gourmet, nuestro restaurante es perfecto para disfrutar de momentos memorables con
-                        amigos y familiares. ¡Descubre una experiencia gastronómica inolvidable en nuestro hotel!
+                        amigos y familiares.
                     </p>
                 </div>
             </div>
@@ -324,36 +324,35 @@
                     tesoros naturales y culturales que ofrece esta región única.
                 </p>
                 <div class="footer__socials">
-                    <a href="#"><i class="ri-facebook-fill"></i></a>
+                    <a href="https://www.facebook.com/lasvioletasmisiones/?locale=es_LA"><i class="ri-facebook-fill"></i></a>
                     <a href="#"><i class="ri-twitter-fill"></i></a>
-                    <a href="#"><i class="ri-instagram-fill"></i></a>
+                    <a href="https://www.instagram.com/lasvioletasmisiones/reel/C4q47FkpOqO/"><i class="ri-instagram-fill"></i></a>
                 </div>
             </div>
             <div class="footer__col">
                 <h4>Conocer Más</h4>
                 <ul class="footer__links">
-                    <li><a href="#">Ubicación</a></li>
-                    <li><a href="#">Ofertas Exclusivas</a></li>
-                    <li><a href="#">Comunicate con Nosotros</a></li>
-                    <li><a href="#">Seguinos en Nuestras Redes</a></li>
+                    <li><a href="https://maps.app.goo.gl/HkaMWG2qW9B3QtdP8">Ubicación</a></li>
+                    <li><a href="https://www.booking.com/hotel/ar/apart-las-violetas.es-ar.html?aid=318615&label=Spanish_Argentina_ES_AR_20153587225-6h15TH8LvM25bNckrW9zZwS217247257083%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atidsa-162435869305%3Alp1000126%3Ali%3Adec%3Adm&sid=4c637d8688f4287b0317d3ef00e1495c&age=0;checkin=2024-07-10;checkout=2024-07-11;dest_id=-980315;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=1;hpos=1;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;soh=1;sr_order=popularity;srepoch=1720567630;srpvid=f0dfa4e50aee0234;type=total;ucfs=1&#no_availability_msg">Ofertas Exclusivas</a></li>
+                    <li><a href="https://www.instagram.com/lasvioletasmisiones/reel/C4q47FkpOqO/">Comunicate con Nosotros</a></li>
+                    <li><a href="https://www.instagram.com/lasvioletasmisiones/reel/C4q47FkpOqO/">Seguinos en Nuestras Redes</a></li>
                 </ul>
             </div>
 
             <div class="footer__col">
                 <h4>Nuestro Hotel</h4>
                 <ul class="footer__links">
-                    <li><a href="#">Sobre Nosotros</a></li>
-                    <li><a href="#">Nuestro Equipo</a></li>
-                    <li><a href="#">Nuestra Historia</a></li>
-                    <li><a href="#">Reservas</a></li>
+                    <li><a href="#offer">Sobre Nosotros</a></li>
+                    <li><a href="https://www.argentinaturismo.com.ar/cabaniaslasvioletas/">Conoce más</a></li>
+                    <li><a href="https://www.booking.com/hotel/ar/apart-las-violetas.es-ar.html?aid=318615&label=Spanish_Argentina_ES_AR_20153587225-6h15TH8LvM25bNckrW9zZwS217247257083%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atidsa-162435869305%3Alp1000126%3Ali%3Adec%3Adm&sid=4c637d8688f4287b0317d3ef00e1495c&age=0;checkin=2024-07-10;checkout=2024-07-11;dest_id=-980315;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=1;hpos=1;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;soh=1;sr_order=popularity;srepoch=1720567630;srpvid=f0dfa4e50aee0234;type=total;ucfs=1&#no_availability_msg">Reservas</a></li>
                 </ul>
             </div>
 
             <div class="footer__col">
                 <h4>Contactate con Nosotros</h4>
                 <ul class="footer__links">
-                    <li><a href="#">Nuestro Contacto</a></li>
-                    <li><a href="#">Nuestras Redes</a></li>
+                    <li><a href="https://www.argentinaturismo.com.ar/cabaniaslasvioletas/">Nuestro Contacto</a></li>
+                    <li><a href="https://www.instagram.com/lasvioletasmisiones/reel/C4q47FkpOqO/">Nuestras Redes</a></li>
                 </ul>
             </div>
         </div>
