--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             </div>
         </div>
         <div class="footer__bar">
-            Copyright 2023 &#169; All Rights Reserved.
+            Copyright 2023 &#169; All Rights Reserved. Desarrollado por <a href="marinanunez.tech" name="marinanunez">marinanunez.tech</a>
         </div>
     </footer>
 
